--- a/hNext/hNext.WebClient/Views/Home/Index.cshtml
+++ b/hNext/hNext.WebClient/Views/Home/Index.cshtml
@@ -5,83 +5,53 @@
     ViewData["Title"] = $"hNext — {Localizer[nameof(Resources.MedicalInformationSystem)]}";
 }
 
-@section Modals
+<script>
+    const START_TAB = '@Model.Tabs.First().Key';
+    const START_SIDE_TAB = '@Model.SideBar.First().Key';
+</script>
+
+@foreach (var tab in Model.Tabs)
 {
-    @foreach(var modal in Model.Modals)
-    {
-        <div id="@($"{modal.Key.ToCamelCase()}Modal")">
-            @await Component.InvokeAsync(modal.Key)
-        </div>
-    }
+    @await Component.InvokeAsync(tab.Key)
 }
 
-<div class="d-flex flex-row justify-content-start align-items-stretch">
-    <nav>
-        <ul class="nav nav-tabs flex-column">
-            @foreach (var tab in Model.Tabs)
-            {
-                <li class="nav-item">
-                    <a class="nav-link active side-tab-selector p-1" id="@($"{tab.Key.ToCamelCase()}Tab")">
-                        @tab.Value
-                    </a>
-                </li>
-            }
-        </ul>
-    </nav>
-    <main class="container-fluid flex-grow-1 main-panel">
-        @foreach (var tab in Model.Tabs)
-        {
-            <div id="@($"{tab.Key.ToCamelCase()}Panel")" class="d-flex flex-row flex-grow-1">
-                @await Component.InvokeAsync(tab.Key)
-            </div>
-        }
-    </main>
-    <aside class="d-flex flex-row">
-        <div>
-            @foreach (var sideTab in Model.SideBar)
-            {
-                <div id='@($"{sideTab.Key.ToCamelCase()}SidePanel")' class="d-flex flex-row flex-grow-1 h-100">
-                    @await Component.InvokeAsync(sideTab.Key)
-                </div>
-            }
-        </div>
-        <nav>
-            <ul class="nav nav-tabs flex-column">
-                @foreach (var sideTab in Model.SideBar)
-                {
-                    <li class="nav-item">
-                        <a class="nav-link active side-tab-selector p-1" id="@($"{sideTab.Key.ToCamelCase()}SideTab")">
-                            @sideTab.Value
-                        </a>
-                    </li>
-                }
-            </ul>
-        </nav>
-    </aside>
+@foreach (var sideTab in Model.SideBar)
+{
+    @await Component.InvokeAsync(sideTab.Key)
+}
+
+@foreach (var modal in Model.Modals)
+{
+    @await Component.InvokeAsync(modal.Key)
+}
+
+@await Component.InvokeAsync("MainView", new { model = Model })
+
+<div id="app">
+    <main-view></main-view>
 </div>
+
 
 @section Scripts
 {
+    <script src="~/js/mainView.js" asp-append-version="true"></script>
 
     @foreach (var tab in Model.Tabs)
     {
         <script src="@($"/js/{tab.Key.ToCamelCase()}.js")" asp-append-version="true"></script>
-        <script>
-            let @($"{tab.Key.ToCamelCase()}Vue") = window["@($"{tab.Key.ToCamelCase()}Model")"]("@($"{tab.Key.ToCamelCase()}Panel")");
-        </script>
     }
-    @foreach(var sideTab in Model.SideBar)
+    @foreach (var sideTab in Model.SideBar)
     {
         <script src="@($"/js/{sideTab.Key.ToCamelCase()}.js")" asp-append-version="true"></script>
-        <script>
-            let @($"{sideTab.Key.ToCamelCase()}Vue") = window["@($"{sideTab.Key.ToCamelCase()}Model")"]("@($"{sideTab.Key.ToCamelCase()}SidePanel")");
-        </script>
     }
-    @foreach(var modal in Model.Modals)
+    @foreach (var modal in Model.Modals)
     {
         <script src="@($"/js/{modal.Key.ToCamelCase()}.js")" asp-append-version="true"></script>
-        <script>
-            let @($"{modal.Key.ToCamelCase()}Vue") = window['@($"{modal.Key.ToCamelCase()}Model")']('@($"{modal.Key.ToCamelCase()}Modal")');
-        </script>
     }
+
+    <script>
+        new Vue({
+            el: '#app'
+        });
+    </script>
 }
