--- a/hNext/hNext.WebClient/Views/Shared/Components/PatientDetails/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/PatientDetails/Default.cshtml
@@ -1,70 +1,72 @@
 ﻿@inject Microsoft.Extensions.Localization.IStringLocalizer<Resources> Localizer
 
-<div class="main-panel ml-2">
-    <table class="table table-borderless table-sm mt-1 mx-1">
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.FamilyName)]:</td>
-            <td class="side-tab-field" v-cloak>{{ familyName }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.FirstName)]:</td>
-            <td class="side-tab-field" v-cloak>{{ firstName }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.Patronimic)]:</td>
-            <td class="side-tab-field" v-cloak>{{ patronimic }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.Gender)]:</td>
-            <td class="side-tab-field" v-cloak>{{ gender }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.DateOfBirth)]:</td>
-            <td class="side-tab-field" v-cloak>{{ dateOfBirth | shortDate }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.CountryOfBirth)]:</td>
-            <td class="side-tab-field" v-cloak>{{ countryOfBirth }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.PlaceOfBirth)]:</td>
-            <td class="side-tab-field" v-cloak>{{ placeOfBirth }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap font-weight-bold">@Localizer[nameof(Resources.Address)]</td>
-            <td class="side-tab-field"></td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.Country)]:</td>
-            <td class="side-tab-field" v-cloak>{{ addressCountry }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.Region)]:</td>
-            <td class="side-tab-field" v-cloak>{{ addressRegion }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.District)]:</td>
-            <td class="side-tab-field" v-cloak>{{ addressDistrict }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap" v-text="`${addressCityType || '@Localizer[nameof(Resources.City)]'}:`">
-                @Localizer[nameof(Resources.City)]:
-            </td>
-            <td class="side-tab-field" v-cloak>{{ addressCity }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap" v-text="`${addressStreetType || '@Localizer[nameof(Resources.Street)]'}:`">
-                @Localizer[nameof(Resources.Street)]:
-            </td>
-            <td class="side-tab-field" v-cloak>{{ addressStreet }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.Building)]:</td>
-            <td class="side-tab-field" v-cloak>{{ addressBuilding }}</td>
-        </tr>
-        <tr>
-            <td class="text-right text-nowrap">@Localizer[nameof(Resources.Apartment)]:</td>
-            <td class="side-tab-field" v-cloak>{{ addressApartment }}</td>
-        </tr>
-    </table>
-</div>
+<template id="patient-details-template">
+    <div class="main-panel ml-2">
+        <table class="table table-borderless table-sm mt-1 mx-1">
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.FamilyName)]:</td>
+                <td class="side-tab-field" v-cloak>{{ familyName }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.FirstName)]:</td>
+                <td class="side-tab-field" v-cloak>{{ firstName }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.Patronimic)]:</td>
+                <td class="side-tab-field" v-cloak>{{ patronimic }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.Gender)]:</td>
+                <td class="side-tab-field" v-cloak>{{ gender }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.DateOfBirth)]:</td>
+                <td class="side-tab-field" v-cloak>{{ dateOfBirth | shortDate }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.CountryOfBirth)]:</td>
+                <td class="side-tab-field" v-cloak>{{ countryOfBirth }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.PlaceOfBirth)]:</td>
+                <td class="side-tab-field" v-cloak>{{ placeOfBirth }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap font-weight-bold">@Localizer[nameof(Resources.Address)]</td>
+                <td class="side-tab-field"></td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.Country)]:</td>
+                <td class="side-tab-field" v-cloak>{{ addressCountry }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.Region)]:</td>
+                <td class="side-tab-field" v-cloak>{{ addressRegion }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.District)]:</td>
+                <td class="side-tab-field" v-cloak>{{ addressDistrict }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap" v-text="`${addressCityType || '@Localizer[nameof(Resources.City)]'}:`">
+                    @Localizer[nameof(Resources.City)]:
+                </td>
+                <td class="side-tab-field" v-cloak>{{ addressCity }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap" v-text="`${addressStreetType || '@Localizer[nameof(Resources.Street)]'}:`">
+                    @Localizer[nameof(Resources.Street)]:
+                </td>
+                <td class="side-tab-field" v-cloak>{{ addressStreet }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.Building)]:</td>
+                <td class="side-tab-field" v-cloak>{{ addressBuilding }}</td>
+            </tr>
+            <tr>
+                <td class="text-right text-nowrap">@Localizer[nameof(Resources.Apartment)]:</td>
+                <td class="side-tab-field" v-cloak>{{ addressApartment }}</td>
+            </tr>
+        </table>
+    </div>
+</template>
